--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <body class="min-h-screen flex items-center justify-center p-4">
 
     <div class="bg-gray-800 p-8 rounded-2xl shadow-2xl w-full max-w-md space-y-6 text-center">
-        <h1 class="text-3xl font-extrabold text-white">Gen Z ID Card Generator</h1>
+        <h1 class="text-3xl font-extrabold text-white">Dawn Of Code ID Card</h1>
         <p class="text-gray-400 font-mono">Enter your details to generate your ID card for the hackathon.</p>
 
         <div class="relative">
@@ -164,7 +164,7 @@
                     </div>
 
                     <div class="mt-4 text-center">
-                        <p class="font-bold text-lg neon-text tracking-wider">DAWN OF CODE</p>
+                        <p class="font-bold text-lg neon-text tracking-wider">DAWN OF <ODE</p>
                         <p class="text-xs font-light text-gray-400">HACKATHON</p>
                     </div>
 
@@ -265,5 +265,6 @@
     </script>
 
 </body>
+
 
 </html>
