--- a/index.html
+++ b/index.html
@@ -17,21 +17,30 @@
             font-family: 'Poppins', sans-serif;
         }
 
+        /* Set a dark, professional background */
         body {
             background-color: #0d1117;
+            /* Dark background like GitHub */
             color: #e6edf3;
+            /* Light text color */
         }
 
+        /* Style the ID card container to match the new design */
         #idCardContainer {
             width: 450px;
+            /* Wider for horizontal layout */
             height: 280px;
+            /* Shorter to maintain aspect ratio */
             background: #161b22;
+            /* A slightly lighter dark for contrast */
             border-radius: 18px;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5), inset 0 0 10px rgba(255, 255, 255, 0.05);
             position: relative;
             padding: 1.5rem;
             display: flex;
+            /* Flexbox for horizontal arrangement */
             flex-direction: row;
+            /* Changed to row */
             align-items: center;
             justify-content: space-between;
             overflow: hidden;
@@ -40,11 +49,13 @@
             z-index: 10;
         }
 
+        /* Neon glow effect for titles and key elements */
         .neon-text {
             text-shadow: 0 0 5px #00f, 0 0 10px #00f, 0 0 15px #00f, 0 0 20px #00f;
             color: #fff;
         }
 
+        /* Vibrant geometric shapes for visual flair */
         .shape-a {
             position: absolute;
             top: -20px;
@@ -52,6 +63,7 @@
             width: 150px;
             height: 150px;
             background: linear-gradient(45deg, #00f, #f0f);
+            /* Blue to Magenta gradient */
             clip-path: polygon(0 0, 100% 0, 0 100%);
             opacity: 0.6;
             transform: rotate(15deg);
@@ -65,25 +77,32 @@
             width: 150px;
             height: 150px;
             background: linear-gradient(-45deg, #0f0, #ff0);
+            /* Green to Yellow gradient */
             clip-path: polygon(100% 0, 100% 100%, 0 100%);
             opacity: 0.6;
             transform: rotate(15deg);
             z-index: 0;
         }
 
+        /* Make the main content stand out */
         .content {
             position: relative;
             z-index: 20;
             display: flex;
+            /* Use flexbox */
             flex-direction: row;
+            /* Arrange children horizontally */
             justify-content: space-between;
+            /* Space out the sections */
             align-items: center;
             width: 100%;
             height: 100%;
         }
 
+        /* Style for sponsor logos */
         .sponsor-logo {
             width: 48px;
+            /* Standard size */
             height: auto;
             object-fit: contain;
             filter: grayscale(100%);
@@ -96,6 +115,7 @@
             opacity: 1;
         }
 
+        /* Subtle pulsating animation for key elements */
         @keyframes pulse {
             0% {
                 box-shadow: 0 0 0 0 rgba(0, 255, 255, 0.4);
@@ -115,17 +135,14 @@
 <body class="min-h-screen flex items-center justify-center p-4">
 
     <div class="bg-gray-800 p-8 rounded-2xl shadow-2xl w-full max-w-md space-y-6 text-center">
-        <h1 class="text-3xl font-extrabold text-white">ID Card Generator</h1>
+        <h1 class="text-3xl font-extrabold text-white">Gen Z ID Card Generator</h1>
         <p class="text-gray-400 font-mono">Enter your details to generate your ID card for the hackathon.</p>
 
-        <div class="relative space-y-4">
+        <div class="relative">
             <input type="text" id="nameInput" placeholder="Enter participant's full name"
-                class="w-full px-4 py-3 bg-gray-700 text-white rounded-lg border-2 border-transparent focus:outline-none focus:border-purple-500 transition-all duration-300">
+                class="w-full px-4 py-3 mb-4 bg-gray-700 text-white rounded-lg border-2 border-transparent focus:outline-none focus:border-purple-500 transition-all duration-300">
             <input type="text" id="regNoInput" placeholder="Enter registration number"
                 class="w-full px-4 py-3 bg-gray-700 text-white rounded-lg border-2 border-transparent focus:outline-none focus:border-purple-500 transition-all duration-300">
-            <label for="imageUpload" class="block text-left text-gray-400">Upload your image:</label>
-            <input type="file" id="imageUpload" accept="image/*"
-                class="w-full text-white bg-gray-700 rounded-lg file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-indigo-600 file:text-white hover:file:bg-purple-600">
         </div>
 
         <button id="generateBtn"
@@ -142,9 +159,8 @@
             <div class="content">
                 <div class="flex flex-col items-center justify-center flex-1 pr-4">
                     <div
-                        class="w-20 h-20 rounded-full flex items-center justify-center border-2 border-cyan-400 overflow-hidden">
-                        <img id="participantImage" src="logo.jpg" alt="Participant Image"
-                            class="w-full h-full object-cover">
+                        class="w-16 h-16 rounded-full flex items-center justify-center border-2 border-cyan-400 animate-pulse-border">
+                        <img src="logo.jpg" alt="Hackathon Logo" class="w-14 h-14 rounded-full">
                     </div>
 
                     <div class="mt-4 text-center">
@@ -178,34 +194,21 @@
                 </div>
             </div>
         </div>
+
     </div>
 
     <script>
         // Get references to the HTML elements
         const nameInput = document.getElementById('nameInput');
         const regNoInput = document.getElementById('regNoInput');
-        const imageUpload = document.getElementById('imageUpload'); // New image input element
         const generateBtn = document.getElementById('generateBtn');
         const messageArea = document.getElementById('messageArea');
         const idCardContainer = document.getElementById('idCardContainer');
         const participantNameEl = document.getElementById('participantName');
         const participantRegNoEl = document.getElementById('participantRegNo');
-        const participantImageEl = document.getElementById('participantImage'); // New participant image element
 
         // Sample list of valid registration numbers
         const validRegNos = ['12345', '67890', '11223', '44556'];
-
-        // Add event listener to the image upload input
-        imageUpload.addEventListener('change', (event) => {
-            const file = event.target.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = (e) => {
-                    participantImageEl.src = e.target.result;
-                };
-                reader.readAsDataURL(file);
-            }
-        });
 
         // Add an event listener to the button
         generateBtn.addEventListener('click', () => {
@@ -223,13 +226,6 @@
                 messageArea.classList.add('text-red-500');
                 return;
             }
-
-            if (!imageUpload.files[0]) {
-                messageArea.textContent = 'Please upload your image.';
-                messageArea.classList.add('text-red-500');
-                return;
-            }
-
 
             messageArea.textContent = 'Generating your ID card...';
             messageArea.classList.remove('text-red-500');
@@ -267,6 +263,7 @@
             }, 500); // 500ms delay
         });
     </script>
+
 </body>
 
 </html>
